# OPC-Data_Engineer

./: .gitignore
.github/workflows/: sync-opc.yml
OPC10-Mettez en place un pipeline d'orchestration des flux/src/: __init__.py
OPC10-Mettez_en_place_un_pipeline_d-orchestration_des_flux/: module_arbo.txt
OPC11-Concevez_et_deployez_un_systeme_RAG/: module_arbo.txt
OPC12-Gerez_un_projet_d-infrastructure/: module_arbo.txt
OPC13-Passez_votre_systeme_IA_du_POC_au_MVP_et_realisez_votre_portfolio_de_Data_Engineer/: module_arbo.txt
OPC2-Analysez les données de systèmes éducatifs/: README.md  gitignore  pyproject.toml
OPC2-Analysez_les_donnees_de_systemes_educatifs/: .editorconfig  .gitignore  README.md  main.py
OPC3-Entrainez-vous_avec_SQL_et_creez_votre_BDD/: .gitignore  README.md  module_arbo.txt
OPC4-Auditez_un_environnement_de_donnees/: module_arbo.txt
OPC6-Anticipez_les_besoins_en_consommation_de_batiments/: DECISIONS.md  README.md  consigne.md  gitignore  module_arbo.txt  pyproject.toml
OPC6-Anticipez_les_besoins_en_consommation_de_batiments/docs/notes/: notes_phase1.md
OPC6-Anticipez_les_besoins_en_consommation_de_batiments/notebooks/: 01_eda.ipynb  template_modelistation_supervisee.ipynb
OPC7-Concevez_et_analysez_une_base_de_donnees_NoSQL/: module_arbo.txt
OPC8-Construisez_et_testez_une_infrastructure_de_donnees/: module_arbo.txt
OPC9-Modelisez_une_infrastructure_dans_le_cloud/: module_arbo.txt
Template/: Arborescence.txt  gen_arbo_opc.py
oc_tools/: __init__.py  cleaning.py  exploration.py  load_save.py
(+46 files in other folders)
