[project]
name = "opc6-anticipez-consommation-batiments"
version = "0.1.0"
description = "Projet 6 OpenClassrooms Data Engineer — Prédiction de la consommation énergétique des bâtiments non résidentiels de Seattle, exposition via API BentoML déployée sur AWS."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Paul-Alexandre ANNONAY" }
]

# Dépendances de production (incluses dans le bentofile.yaml)
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.5,<2.0",
    # API et validation (utilisées en phases 8-9)
    "bentoml>=1.3,<2.0",
    "pydantic>=2.6,<3.0",
]

# Dépendances de développement (NON incluses dans le bentofile.yaml)
[dependency-groups]
dev = [
    # Notebooks
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    # Visualisation EDA
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Qualité de code (optionnel mais recommandé)
    "ruff>=0.5",
]

[tool.uv]
package = false